--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.8.0",
+  "version": "0.8.1",
   "name": "react-union-scripts",
   "description": "Provides scripts for building JS web apps targeted on either CMS or Portal solutions.",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.2",
-    "babel-preset-react-union": "0.7.1",
+    "babel-preset-react-union": "^0.7.2",
     "browser-sync": "2.24.7",
     "bundle-loader": "0.5.6",
     "clean-webpack-plugin": "0.1.19",
