dependencies can be installed to local repository

--- a/boilerplates/react-union-boilerplate-liferay-basic/hero-portlet/build.gradle
+++ b/boilerplates/react-union-boilerplate-liferay-basic/hero-portlet/build.gradle
@@ -21,8 +21,8 @@ dependencies {
 	compileOnly group: "jstl", name: "jstl", version: "1.2"
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.5.0"
-	implementation project(':react-union-support')
-	implementation project(':react-union-taglib')
+	compileOnly group: "eu.lundegaard.react-union-liferay", name: "react-union-support", version: "1.0.0"
+	compileOnly group: "eu.lundegaard.react-union-liferay", name: "react-union-taglib", version: "1.0.0"
 }
 
 repositories {
