--- a/boilerplates/react-union-boilerplate-monorepo/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/package.json
@@ -32,9 +32,7 @@
     "start": "react-union-scripts start --app union-app-sample-app",
     "test": "react-union-scripts test",
     "lint": "yarn lint:eslint",
-    "lint:eslint": "eslint --ext .js ./",
-    "precommit": "lint-staged",
-    "prepush": "yarn lint && yarn test --release"
+    "lint:eslint": "eslint --ext .js ./"
   },
   "lint-staged": {
     "linters": {
