--- a/boilerplates/react-union-boilerplate-monorepo/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.0",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-preset-react-union": "^0.7.2",
     "enzyme": "3.6.0",
     "enzyme-adapter-react-16": "1.6.0",
