--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -18,7 +18,7 @@
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
-    "babel-core": "7.0.0-bridge.0",
+    "@babel/core": "^7.1.2",
     "babel-eslint": "10.0.0",
     "babel-preset-react-union": "^0.8.0",
     "enzyme": "3.6.0",
