--- a/boilerplates/react-union-boilerplate-monorepo/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/package.json
@@ -11,7 +11,7 @@
     "packages/*"
   ],
   "devDependencies": {
-    "babel-core": "7.0.0-bridge.0",
+    "@babel/core": "^7.1.2",
     "babel-eslint": "10.0.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-preset-react-union": "^0.8.0",
