--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "repository": "https://github.com/lundegaard/react-union",
   "license": "UNLICENSED",
   "devDependencies": {
-    "babel-core": "7.0.0-bridge.0",
+    "@babel/core": "^7.1.2",
+    "@babel/cli": "^7.1.2",
     "babel-eslint": "10.0.0",
     "babel-jest": "23.4.2",
     "babel-loader": "8.0.3",
