--- a/packages/babel-preset-react-union/package.json
+++ b/packages/babel-preset-react-union/package.json
@@ -10,8 +10,8 @@
     "Vaclav Jancarik <vaclav.jancarik@lundegaard.eu>"
   ],
   "dependencies": {
-    "@babel/cli": "7.1.2",
-    "@babel/core": "7.1.2",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
     "@babel/plugin-external-helpers": "7.0.0",
     "@babel/plugin-proposal-class-properties": "7.1.0",
     "@babel/plugin-proposal-decorators": "7.1.2",
@@ -33,8 +33,8 @@
     "@babel/plugin-transform-react-constant-elements": "7.0.0",
     "@babel/plugin-transform-regenerator": "7.0.0",
     "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/preset-env": "7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "7.1.2"
+    "@babel/runtime": "^7.1.2"
   }
 }
