--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -16,7 +16,7 @@
     "node": ">=8"
   },
   "dependencies": {
-    "babel-core": "7.0.0-bridge.0",
+    "@babel/core": "^7.1.2",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.3",
     "babel-preset-react-union": "^0.8.0",
