--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -22,7 +22,7 @@
     "ramda": "0.25.0"
   },
   "devDependencies": {
-    "babel-core": "7.0.0-bridge.0",
+    "@babel/core": "^7.1.2",
     "babel-preset-react-union": "^0.8.0",
     "cross-env": "5.2.0",
     "enzyme": "3.6.0",
