--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.1.2",
+    "babel-core": "^7.0.0-bridge",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.3",
     "babel-preset-react-union": "^0.8.1",
@@ -52,6 +53,7 @@
     "webpack-merge": "4.1.3"
   },
   "devDependencies": {
+    "babel-core": "^7.0.0-bridge",
     "react": "16.6.0",
     "react-dom": "16.6.0"
   }
