--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -27,6 +27,7 @@
     "cross-env": "5.2.0",
     "enzyme": "3.6.0",
     "enzyme-adapter-react-16": "1.6.0",
+    "enzyme-to-json": "^3.3.4",
     "jsdom": "12.2.0",
     "react": "16.6.0",
     "react-dom": "16.6.0",
