--- a/boilerplates/react-union-boilerplate-liferay-basic/packages/widget-content/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/packages/widget-content/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "widget-content",
+	"name": "@union-app/widget-content",
 	"version": "0.1.0",
 	"private": true,
 	"license": "UNLICENSED",
