--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,23 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+### Vim ###
+## Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
 
+## Session
+Session.vim
+
+## Temporary
+.netrwhist
+*~
+## Auto-generated tag files
+tags
+## Persistent undo
+[._]*.un~
 
 # End of https://www.gitignore.io/api/code,node,linux,macos,windows,webstorm,sublimetext
