--- a/boilerplates/react-union-boilerplate-liferay-basic/packages/app-demo/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/packages/app-demo/package.json
@@ -8,18 +8,18 @@
 	},
 	"dependencies": {
 		"@babel/polyfill": "^7.0.0",
+		"@union-app/widget-content": "0.1.0",
+		"@union-app/widget-hero": "0.1.0",
+		"document-ready": "2.0.1",
 		"prop-types": "^15.6.2",
-		"ramda": "^0.25.0",
-		"ramda-extension": "^0.6.1",
+		"ramda": "^0.26.0",
+		"ramda-extension": "^0.7.0",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
 		"react-hot-loader": "^4.3.3",
-		"react-union": "0.8.1",
-		"document-ready": "2.0.1",
-		"redbox-react": "1.5.0",
+		"react-union": "0.9.2",
+		"redbox-react": "1.6.0",
 		"redux": "^4.0.1",
-		"redux-devtools-extension": "^2.13.5",
-		"@union-app/widget-content": "0.1.0",
-		"@union-app/widget-hero": "0.1.0"
+		"redux-devtools-extension": "^2.13.5"
 	}
 }
