--- a/boilerplates/react-union-boilerplate-monorepo/packages/app-sample/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/packages/app-sample/package.json
@@ -15,6 +15,6 @@
     "react-dom": "16.6.3",
     "react-hot-loader": "4.3.12",
     "react-union": "0.10.0",
-    "redbox-react": "1.6.0"
+    "react-universal-component": "^3.0.3"
   }
 }
