--- a/boilerplates/react-union-boilerplate-liferay-basic/packages/widget-hero/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/packages/widget-hero/package.json
@@ -6,7 +6,7 @@
 	"engines": {
 		"node": ">=8"
 	},
-	"main": "src/hero.widget.js",
+	"main": "src/index.js",
 	"dependencies": {
 		"@babel/polyfill": "^7.0.0",
 		"prop-types": "^15.6.2",
