--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-jest": "23.6.0",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
+    "enzyme-to-json": "3.3.4",
     "eslint": "5.9.0",
     "eslint-config-react-union": "0.9.0",
     "eslint-plugin-babel": "5.3.0",
@@ -48,20 +49,29 @@
     "lerna": "2.2.0",
     "lint-staged": "8.1.0",
     "prettier": "1.15.2",
-    "rimraf": "2.6.2"
+    "ramda": "0.26.1",
+    "ramda-extension": "0.7.1",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "rimraf": "2.6.2",
+    "rollup": "0.67.3",
+    "rollup-plugin-auto-external": "2.0.0",
+    "rollup-plugin-babel": "4.0.3",
+    "rollup-plugin-commonjs": "9.2.0",
+    "rollup-plugin-node-resolve": "3.4.0",
+    "rollup-plugin-replace": "2.1.0",
+    "rollup-plugin-terser": "3.0.0"
   },
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
     "example:basic": "cd boilerplates/react-union-boilerplate-basic && yarn start",
-    "lint": "eslint \"packages/**/*.js\"",
+    "lint": "eslint --ext .js ./",
     "lint:fix": "yarn lint --fix",
     "test": "jest",
-    "postinstall": "cd packages/react-union && yarn build",
-    "pretty": "prettier --write \"packages/**/*.js\" \"boilerplates/**/*.js\"",
-    "format": "yarn pretty && yarn lint:fix",
-    "publishAll": "lerna publish"
+    "build": "lerna exec --scope react-union -- rollup -c=../../rollup.config.js",
+    "prepublish": "yarn build"
   },
   "lint-staged": {
     "linters": {
