--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -4,13 +4,13 @@
   "license": "MIT",
   "main": "lib/react-union.js",
   "module": "es/react-union.js",
-  "jsnext:main": "es/react-union.js",
+  "unpkg": "dist/react-union.js",
   "repository": "https://github.com/lundegaard/react-union",
   "contributors": [
     "Tomas Konrady <tomas.konrady@lundegaard.eu>",
     "Vaclav Jancarik <vaclav.jancarik@lundegaard.eu>"
   ],
-  "description": "Component for assembling distributed HTML fragments into one logic React application",
+  "description": "React component that allows assembling React application with a single virtual DOM from distributed HTML segments.",
   "files": [
     "src",
     "lib",
@@ -26,30 +26,14 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "babel-preset-react-union": "^0.9.0",
-    "cross-env": "5.2.0",
     "enzyme": "3.7.0",
-    "enzyme-adapter-react-16": "1.7.0",
-    "enzyme-to-json": "^3.3.4",
     "jsdom": "13.0.0",
     "react": "16.6.3",
-    "react-dom": "16.6.3",
-    "rollup": "0.67.3",
-    "rollup-plugin-babel": "4.0.3",
-    "rollup-plugin-commonjs": "9.2.0",
-    "rollup-plugin-node-resolve": "3.4.0",
-    "rollup-plugin-replace": "2.1.0",
-    "rollup-plugin-terser": "3.0.0"
+    "react-dom": "16.6.3"
   },
   "peerDependencies": {
     "react": "^16.6.1",
     "react-dom": "^16.6.1"
   },
-  "scripts": {
-    "build:commonjs": "cross-env NODE_ENV=cjs rollup -c -o lib/react-union.js",
-    "build:es": "cross-env BABEL_ENV=es NODE_ENV=es rollup -c -o es/react-union.js",
-    "build:umd": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -o dist/react-union.js",
-    "build:umd:min": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -o dist/react-union.min.js",
-    "build": "yarn build:commonjs && yarn build:es && yarn build:umd && yarn build:umd:min",
-    "prepublish": "yarn build"
-  }
+  "sideEffects": false
 }
