--- a/packages/babel-preset-react-union/package.json
+++ b/packages/babel-preset-react-union/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "^7.1.2"
+    "@babel/runtime": "^7.1.2",
+    "babel-plugin-universal-import": "^3.1.2"
   }
 }
