--- a/lerna.json
+++ b/lerna.json
@@ -1,14 +1,17 @@
 {
-	"lerna": "2.2.0",
-	"version": "0.10.0",
-	"command": {
-		"init": {
-			"exact": true
-		},
-		"publish": {
-			"ignore": ["*.md", "test/**"]
-		}
-	},
-	"npmClient": "yarn",
-	"useWorkspaces": true
+  "lerna": "2.2.0",
+  "version": "0.10.1-0",
+  "command": {
+    "init": {
+      "exact": true
+    },
+    "publish": {
+      "ignore": [
+        "*.md",
+        "test/**"
+      ]
+    }
+  },
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
