--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.10.0",
+  "version": "0.10.1-0",
   "name": "react-union-scripts",
   "description": "Provides scripts for building JS web apps targeted on either CMS or Portal solutions.",
   "license": "MIT",
@@ -20,7 +20,7 @@
     "babel-core": "^7.0.0-bridge",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
-    "babel-preset-react-union": "^0.9.0",
+    "babel-preset-react-union": "^0.10.1-0",
     "browser-sync": "2.26.3",
     "clean-webpack-plugin": "1.0.0",
     "connect-history-api-fallback": "1.5.0",
