--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -15,20 +15,20 @@
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "react-hot-loader": "4.3.12",
-    "react-union": "^0.10.0",
-    "react-universal-component": "^3.0.3"
+    "react-union": "0.11.0",
+    "react-universal-component": "3.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "7.2.0",
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "10.0.1",
-    "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-preset-react-union": "^0.9.0",
+    "babel-plugin-dynamic-import-node": "2.2.0",
+    "babel-preset-react-union": "0.11.0",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
     "enzyme-to-json": "3.3.4",
     "eslint": "5.9.0",
-    "eslint-config-react-union": "^0.9.0",
+    "eslint-config-react-union": "0.9.0",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-react": "7.11.1",
@@ -36,9 +36,9 @@
     "lint-staged": "8.1.0",
     "mkdirp": "0.5.1",
     "prettier": "1.15.3",
-    "ramda": "^0.26.1",
-    "ramda-extension": "^0.7.1",
-    "react-union-scripts": "^0.10.0",
+    "ramda": "0.26.1",
+    "ramda-extension": "0.7.1",
+    "react-union-scripts": "0.11.0",
     "rimraf": "2.6.2"
   },
   "scripts": {
