--- a/packages/react-union-ssr-server/package.json
+++ b/packages/react-union-ssr-server/package.json
@@ -23,5 +23,11 @@
     "react-dom": "^16.6.3",
     "react-union": "^0.11.0",
     "react-universal-component": "^3.0.3"
+  },
+  "devDependencies": {
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "react-union": "0.11.0",
+    "react-universal-component": "3.0.3"
   }
 }
