--- a/boilerplates/react-union-boilerplate-ssr-basic/package.json
+++ b/boilerplates/react-union-boilerplate-ssr-basic/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "7.2.0",
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "10.0.1",
+    "babel-plugin-dynamic-import-node": "2.2.0",
     "babel-preset-react-union": "0.11.0",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
