--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -27,6 +27,7 @@
     "cross-env": "5.2.0",
     "css-loader": "1.0.1",
     "del": "3.0.0",
+    "extract-css-chunks-webpack-plugin": "3.2.1",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.1",
     "glob": "7.1.3",
@@ -41,13 +42,13 @@
     "raw-loader": "0.5.1",
     "react-hot-loader": "4.3.12",
     "resolve-url-loader": "3.0.0",
-    "style-loader": "0.23.1",
     "uglifyjs-webpack-plugin": "2.0.1",
     "url-loader": "1.1.2",
     "webpack": "4.26.1",
     "webpack-bundle-analyzer": "3.0.3",
     "webpack-dev-middleware": "3.4.0",
     "webpack-hot-middleware": "2.24.3",
+    "webpack-hot-server-middleware": "0.5.0",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-merge": "4.1.4"
   },
