--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -24,8 +24,8 @@
     "ramda-extension": "^0.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "babel-preset-react-union": "^0.11.0",
+    "@babel/core": "7.2.0",
+    "babel-preset-react-union": "0.11.0",
     "enzyme": "3.7.0",
     "react": "16.6.3",
     "react-dom": "16.6.3"
