--- a/boilerplates/react-union-boilerplate-basic/.editorconfig
+++ b/boilerplates/react-union-boilerplate-basic/.editorconfig
@@ -5,7 +5,11 @@ charset = utf-8
 
 [*.js]
 indent_style = tab
-indent_size = 4
+indent_size = 2
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[package.json]
+indent_style = space
+indent_size = 2
