--- a/boilerplates/react-union-boilerplate-monorepo/packages/widget-hero/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/packages/widget-hero/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@union-app/widget-hero",
+  "name": "@union-monorepo/widget-hero",
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
