--- a/boilerplates/react-union-boilerplate-liferay-basic/packages/app-demo/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/packages/app-demo/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@union-app/app-demo",
+	"name": "@union-liferay/app-demo",
 	"version": "0.1.0",
 	"private": true,
 	"license": "UNLICENSED",
@@ -7,15 +7,15 @@
 		"node": ">=8"
 	},
 	"dependencies": {
-		"@babel/polyfill": "^7.0.0",
-		"@union-app/widget-content": "0.1.0",
-		"@union-app/widget-hero": "0.1.0",
-		"document-ready": "2.0.1",
-		"prop-types": "^15.6.2",
-		"react": "^16.4.1",
-		"react-dom": "^16.4.1",
-		"react-hot-loader": "^4.3.3",
-		"react-union": "0.10.0",
-		"react-universal-component": "^3.0.3"
+		"@babel/polyfill": "7.0.0",
+		"@union-liferay/widget-content": "0.1.0",
+		"@union-liferay/widget-hero": "0.1.0",
+		"document-ready": "2.0.2",
+		"prop-types": "15.6.2",
+		"react": "16.6.3",
+		"react-dom": "16.6.3",
+		"react-hot-loader": "4.6.0",
+		"react-union": "0.11.0",
+		"react-universal-component": "3.0.3"
 	}
 }
