--- a/boilerplates/react-union-boilerplate-liferay-basic/packages/widget-hero/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/packages/widget-hero/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@union-app/widget-hero",
+	"name": "@union-liferay/widget-hero",
 	"version": "0.1.0",
 	"private": true,
 	"license": "UNLICENSED",
@@ -8,10 +8,10 @@
 	},
 	"main": "src/index.js",
 	"dependencies": {
-		"@babel/polyfill": "^7.0.0",
-		"prop-types": "^15.6.2",
-		"react": "^16.4.1",
-		"react-dom": "^16.4.1"
+		"@babel/polyfill": "7.0.0",
+		"prop-types": "15.6.2",
+		"react": "16.6.3",
+		"react-dom": "16.6.3"
 	},
 	"devDependencies": {
 		"enzyme": "3.7.0"
