--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   },
   "workspaces": [
     "packages/*",
-    "boilerplates/*"
+    "boilerplates/*",
+    "boilerplates/*/packages/*"
   ],
   "scripts": {
     "example:basic": "cd boilerplates/react-union-boilerplate-basic && yarn start",
