--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-react": "7.11.1",
+    "fs-extra": "7.0.1",
+    "glob": "7.1.3",
     "husky": "1.2.0",
     "lint-staged": "8.1.0",
     "mkdirp": "0.5.1",
