--- a/packages/react-union-rendering-service/package.json
+++ b/packages/react-union-rendering-service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-union-ssr-server",
+  "name": "react-union-rendering-service",
   "version": "0.11.0",
-  "description": "HTTP server for server-side rendering.",
+  "description": "HTTP service for server-side rendering.",
   "main": "src/index.js",
   "repository": "https://github.com/lundegaard/react-union",
   "contributors": [
