--- a/package.json
+++ b/package.json
@@ -33,6 +33,13 @@
   "devDependencies": {
     "@babel/cli": "7.2.0",
     "@babel/core": "7.2.0",
+		"@babel/plugin-proposal-class-properties": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "7.2.0",
+		"@babel/plugin-transform-react-jsx": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/preset-env": "7.2.0",
+    "@babel/runtime": "7.2.0",
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
@@ -55,7 +62,6 @@
     "react-dom": "16.6.3",
     "rimraf": "2.6.2",
     "rollup": "0.67.3",
-    "rollup-plugin-auto-external": "2.0.0",
     "rollup-plugin-babel": "4.0.3",
     "rollup-plugin-commonjs": "9.2.0",
     "rollup-plugin-node-resolve": "3.4.0",
