--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -25,12 +25,14 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.0",
+    "@babel/runtime": "7.2.0",
     "babel-preset-react-union": "0.11.0",
     "enzyme": "3.7.0",
     "react": "16.6.3",
     "react-dom": "16.6.3"
   },
   "peerDependencies": {
+    "@babel/runtime": "^7.2.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1"
   },
