--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
+    "babel-preset-react-union": "0.11.0",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
     "enzyme-to-json": "3.3.4",
