--- a/boilerplates/react-union-boilerplate-liferay-basic/liferay/content-portlet/src/main/resources/configuration/eu.reactunion.boilerplate.configuration.ContentConfiguration.properties
+++ b/boilerplates/react-union-boilerplate-liferay-basic/liferay/content-portlet/src/main/resources/configuration/eu.reactunion.boilerplate.configuration.ContentConfiguration.properties
@@ -1,2 +1,2 @@
 heading=Welcome from Liferay portal
-content=This is sample Liferay portal content.
+content=This is a sample Liferay portal content.
