--- a/boilerplates/react-union-boilerplate-liferay-basic/settings.gradle
+++ b/boilerplates/react-union-boilerplate-liferay-basic/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'react-app'
 
-include 'liferay-theme'
-include 'hero-portlet'
+include 'liferay/amd-loader'
+include 'liferay/hero-portlet'
+include 'liferay/content-portlet'
