--- a/boilerplates/react-union-boilerplate-liferay-basic/packages/app-demo/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/packages/app-demo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@union-liferay/app-demo",
-  "version": "0.1.0",
+  "version": "0.12.0",
   "private": true,
   "license": "UNLICENSED",
   "engines": {
@@ -8,14 +8,14 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.2.5",
-    "@union-liferay/widget-content": "0.1.0",
-    "@union-liferay/widget-hero": "0.1.0",
+    "@union-liferay/widget-content": "^0.12.0",
+    "@union-liferay/widget-hero": "^0.12.0",
     "document-ready": "2.0.2",
     "prop-types": "15.6.2",
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "react-hot-loader": "4.6.5",
-    "react-union": "0.11.0",
+    "react-union": "^0.12.0",
     "react-universal-component": "3.0.3"
   }
 }
