--- a/boilerplates/react-union-boilerplate-monorepo/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-union-boilerplate-monorepo",
-  "version": "0.9.1",
+  "version": "0.12.0",
   "private": true,
   "license": "MIT",
   "repository": "https://github.com/lundegaard/react-union",
@@ -15,19 +15,19 @@
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "10.0.1",
     "babel-plugin-dynamic-import-node": "2.2.0",
-    "babel-preset-react-union": "0.11.0",
+    "babel-preset-react-union": "^0.12.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.8.0",
     "enzyme-to-json": "3.3.5",
     "eslint": "5.12.1",
-    "eslint-config-react-union": "0.9.0",
+    "eslint-config-react-union": "^0.12.0",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-react": "7.12.4",
     "husky": "1.3.1",
     "lint-staged": "8.1.1",
     "prettier": "1.16.3",
-    "react-union-scripts": "0.11.0"
+    "react-union-scripts": "^0.12.0"
   },
   "scripts": {
     "build": "react-union-scripts build",
