--- a/boilerplates/react-union-boilerplate-monorepo/packages/widget-hero/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/packages/widget-hero/package.json
@@ -9,10 +9,10 @@
     "node": ">=8"
   },
   "dependencies": {
-    "react": "16.8.3",
-    "react-dom": "16.8.3"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   },
   "devDependencies": {
-    "enzyme": "3.8.0"
+    "enzyme": "^3.8.0"
   }
 }
