--- a/boilerplates/react-union-boilerplate-liferay-basic/packages/widget-content/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/packages/widget-content/package.json
@@ -8,12 +8,12 @@
 	},
 	"main": "src/index.js",
 	"dependencies": {
-		"@babel/polyfill": "7.2.5",
-		"prop-types": "15.6.2",
-		"react": "16.8.3",
-		"react-dom": "16.8.3"
+		"@babel/polyfill": "^7.2.5",
+		"prop-types": "^15.7.2",
+		"react": "^16.8.3",
+		"react-dom": "^16.8.3"
 	},
 	"devDependencies": {
-		"enzyme": "3.8.0"
+		"enzyme": "^3.8.0"
 	}
 }
