--- a/boilerplates/react-union-boilerplate-liferay-ssr/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-ssr/package.json
@@ -8,29 +8,29 @@
     "node": ">=8"
   },
   "devDependencies": {
-    "@babel/core": "7.2.2",
+    "@babel/core": "^7.2.2",
     "babel-core": "^7.0.0-bridge",
-    "babel-eslint": "10.0.1",
-    "babel-plugin-dynamic-import-node": "2.2.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-preset-react-union": "^0.12.0",
-    "enzyme": "3.8.0",
-    "enzyme-adapter-react-16": "1.8.0",
-    "enzyme-to-json": "3.3.5",
-    "eslint": "5.12.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "enzyme-to-json": "^3.3.5",
+    "eslint": "^5.12.1",
     "eslint-config-react-union": "^0.12.0",
-    "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-react": "7.12.4",
-    "fs-extra": "7.0.1",
-    "glob": "7.1.3",
-    "husky": "1.3.1",
-    "lint-staged": "8.1.1",
-    "mkdirp": "0.5.1",
-    "prettier": "1.16.3",
-    "ramda": "0.26.1",
-    "ramda-extension": "0.7.2",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-react": "^7.12.4",
+    "fs-extra": "^7.0.1",
+    "glob": "^7.1.3",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.1",
+    "mkdirp": "^0.5.1",
+    "prettier": "^1.16.3",
+    "ramda": "^0.26.1",
+    "ramda-extension": "^0.7.2",
     "react-union-scripts": "^0.12.0",
-    "rimraf": "2.6.3"
+    "rimraf": "^2.6.3"
   },
   "scripts": {
     "build": "react-union-scripts build --release --target liferay && node ./tools/amdLoaderScripts.js --release",
