--- a/boilerplates/react-union-boilerplate-monorepo/packages/app-sample/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/packages/app-sample/package.json
@@ -8,13 +8,13 @@
     "node": ">=8"
   },
   "dependencies": {
-    "@babel/polyfill": "7.2.5",
+    "@babel/polyfill": "^7.2.5",
     "@union-monorepo/widget-content": "^0.12.0",
     "@union-monorepo/widget-hero": "^0.12.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-hot-loader": "4.6.5",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-hot-loader": "^4.6.5",
     "react-union": "^0.12.0",
-    "react-universal-component": "3.0.3"
+    "react-universal-component": "^4.0.0"
   }
 }
