--- a/boilerplates/react-union-boilerplate-ssr-basic/package.json
+++ b/boilerplates/react-union-boilerplate-ssr-basic/package.json
@@ -8,33 +8,33 @@
     "node": ">=8"
   },
   "dependencies": {
-    "@babel/polyfill": "7.2.5",
-    "classnames": "2.2.6",
-    "prop-types": "15.6.2",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-hot-loader": "4.6.5",
+    "@babel/polyfill": "^7.2.5",
+    "classnames": "^2.2.6",
+    "prop-types": "^15.6.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-hot-loader": "^4.6.5",
     "react-union": "^0.12.0",
     "react-union-rendering-service": "^0.12.0",
-    "react-universal-component": "3.0.3"
+    "react-universal-component": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.2.2",
+    "@babel/core": "^7.2.2",
     "babel-core": "^7.0.0-bridge",
-    "babel-eslint": "10.0.1",
-    "babel-plugin-dynamic-import-node": "2.2.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-preset-react-union": "^0.12.0",
-    "enzyme": "3.8.0",
-    "enzyme-adapter-react-16": "1.8.0",
-    "enzyme-to-json": "3.3.5",
-    "eslint": "5.12.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "enzyme-to-json": "^3.3.5",
+    "eslint": "^5.12.1",
     "eslint-config-react-union": "^0.12.0",
-    "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-react": "7.12.4",
-    "husky": "1.3.1",
-    "lint-staged": "8.1.1",
-    "prettier": "1.16.3",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-react": "^7.12.4",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.1",
+    "prettier": "^1.16.3",
     "react-union-scripts": "^0.12.0"
   },
   "scripts": {
