--- a/package.json
+++ b/package.json
@@ -31,42 +31,36 @@
   "repository": "https://github.com/lundegaard/react-union",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.3.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.3.1",
-    "@babel/plugin-transform-modules-commonjs": "7.2.0",
-    "@babel/plugin-transform-react-jsx": "7.3.0",
-    "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/preset-env": "7.3.1",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
     "babel-core": "^7.0.0-bridge",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "24.0.0",
-    "babel-preset-react-union": "0.11.0",
-    "enzyme": "3.8.0",
-    "enzyme-adapter-react-16": "1.8.0",
-    "enzyme-to-json": "3.3.5",
-    "eslint": "5.12.1",
-    "eslint-config-react-union": "0.9.0",
-    "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-react": "7.12.4",
-    "husky": "1.3.1",
-    "jest": "24.0.0",
-    "lerna": "2.2.0",
-    "lint-staged": "8.1.1",
-    "prettier": "1.16.3",
-    "ramda": "0.26.1",
-    "ramda-extension": "0.7.2",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "rimraf": "2.6.3",
-    "rollup": "1.1.2",
-    "rollup-plugin-babel": "4.3.2",
-    "rollup-plugin-commonjs": "9.2.0",
-    "rollup-plugin-node-resolve": "4.0.0",
-    "rollup-plugin-replace": "2.1.0",
-    "rollup-plugin-terser": "4.0.3"
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.0.0",
+    "babel-preset-react-union": "^0.12.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "enzyme-to-json": "^3.3.5",
+    "eslint": "^5.12.1",
+    "eslint-config-react-union": "^0.12.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-react": "^7.12.4",
+    "husky": "^1.3.1",
+    "jest": "^24.0.0",
+    "lerna": "^2.2.0",
+    "lint-staged": "^8.1.1",
+    "prettier": "^1.16.3",
+    "ramda": "^0.26.1",
+    "ramda-extension": "^0.7.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.1.2",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-terser": "^4.0.3"
   },
   "workspaces": [
     "packages/*",
