--- a/packages/react-union-rendering-service/package.json
+++ b/packages/react-union-rendering-service/package.json
@@ -9,25 +9,25 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "body-parser": "1.18.3",
-    "cheerio": "1.0.0-rc.2",
-    "connect": "3.6.6",
-    "invariant": "2.2.4",
-    "morgan": "1.9.1",
-    "ramda": "0.26.1",
-    "ramda-extension": "0.7.2",
-    "webpack-flush-chunks": "2.0.3"
+    "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
+    "connect": "^3.6.6",
+    "invariant": "^2.2.4",
+    "morgan": "^1.9.1",
+    "ramda": "^0.26.1",
+    "ramda-extension": "^0.7.2",
+    "webpack-flush-chunks": "^2.0.3"
   },
   "peerDependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-union": "^0.12.0",
-    "react-universal-component": "^3.0.3"
+    "react-universal-component": "^4.0.0"
   },
   "devDependencies": {
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-union": "^0.12.0",
-    "react-universal-component": "3.0.3"
+    "react-universal-component": "^4.0.0"
   }
 }
