--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -16,44 +16,45 @@
     "node": ">=8"
   },
   "dependencies": {
-    "@babel/core": "7.2.2",
+    "@babel/core": "^7.2.2",
     "babel-core": "^7.0.0-bridge",
-    "babel-jest": "24.0.0",
-    "babel-loader": "8.0.5",
-    "babel-preset-react-union": "^0.12.0",
-    "browser-sync": "2.26.3",
-    "clean-webpack-plugin": "1.0.1",
-    "connect-history-api-fallback": "1.6.0",
-    "cross-env": "5.2.0",
-    "css-loader": "2.1.0",
-    "del": "3.0.0",
-    "extract-css-chunks-webpack-plugin": "3.3.2",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "glob": "7.1.3",
-    "html-webpack-plugin": "3.2.0",
-    "http-proxy-middleware": "0.19.1",
-    "invariant": "2.2.4",
-    "jest": "24.0.0",
-    "mkdirp": "0.5.1",
-    "ncp": "2.0.0",
-    "ramda": "0.26.1",
-    "ramda-extension": "0.7.2",
-    "raw-loader": "1.0.0",
-    "react-hot-loader": "4.6.5",
-    "resolve-url-loader": "3.0.0",
-    "uglifyjs-webpack-plugin": "2.1.1",
-    "url-loader": "1.1.2",
-    "webpack": "4.29.0",
-    "webpack-bundle-analyzer": "3.0.4",
-    "webpack-dev-middleware": "3.5.1",
-    "webpack-hot-middleware": "2.24.3",
-    "webpack-hot-server-middleware": "0.6.0",
-    "webpack-manifest-plugin": "2.0.4",
-    "webpack-merge": "4.2.1"
+    "babel-jest": "^24.0.0",
+    "babel-loader": "^8.0.5",
+    "browser-sync": "^2.26.3",
+    "clean-webpack-plugin": "^1.0.1",
+    "connect-history-api-fallback": "^1.6.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
+    "del": "^3.0.0",
+    "extract-css-chunks-webpack-plugin": "^3.3.2",
+    "file-loader": "^3.0.1",
+    "fs-extra": "^7.0.1",
+    "glob": "^7.1.3",
+    "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.19.1",
+    "invariant": "^2.2.4",
+    "jest": "^24.0.0",
+    "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0",
+    "ramda": "^0.26.1",
+    "ramda-extension": "^0.7.2",
+    "raw-loader": "^1.0.0",
+    "react-hot-loader": "^4.6.5",
+    "react-union-rendering-service": "^0.12.0",
+    "react-universal-component": "^4.0.0",
+    "resolve-url-loader": "^3.0.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.0",
+    "webpack-bundle-analyzer": "^3.0.4",
+    "webpack-dev-middleware": "^3.5.1",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-hot-server-middleware": "^0.6.0",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
-    "react": "16.8.3",
-    "react-dom": "16.8.3"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   }
 }
