Update dependencies and add pkg lint

--- a/.eslintignore
+++ b/.eslintignore
@@ -10,4 +10,4 @@ boilerplates/*/dist
 boilerplates/*/*/node_modules
 boilerplates/*/*/build
 boilerplates/*/*/dist
-boilerplates/react-union-boilerplate-liferay-basic/liferay
+boilerplates/*/liferay
