--- a/package.json
+++ b/package.json
@@ -31,35 +31,37 @@
   "repository": "https://github.com/lundegaard/react-union",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.0.0",
+    "babel-jest": "^24.8.0",
     "babel-preset-react-union": "^0.12.0",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.8.0",
+    "enzyme-adapter-react-16": "^1.13.0",
     "enzyme-to-json": "^3.3.5",
-    "eslint": "^5.12.1",
+    "eslint": "^5.16.0",
     "eslint-config-react-union": "^0.12.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-react": "^7.12.4",
-    "husky": "^1.3.1",
-    "jest": "^24.0.0",
-    "lerna": "^2.2.0",
-    "lint-staged": "^8.1.1",
-    "prettier": "^1.16.3",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-react": "^7.13.0",
+    "husky": "^2.2.0",
+    "jest": "^24.8.0",
+    "lerna": "^3.13.4",
+    "lint-staged": "^8.1.6",
+    "npm-package-json-lint": "^3.4.1",
+    "npm-package-json-lint-config-default": "^2.0.0",
+    "prettier": "^1.17.0",
     "ramda": "^0.26.1",
     "ramda-extension": "^0.7.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "rimraf": "^2.6.3",
-    "rollup": "^1.1.2",
+    "rollup": "^1.11.3",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^4.0.3"
   },
   "workspaces": [
@@ -69,8 +71,9 @@
   ],
   "scripts": {
     "example:basic": "cd boilerplates/react-union-boilerplate-basic && yarn start",
-    "lint": "eslint --ext .js ./",
-    "lint:fix": "yarn lint --fix",
+    "lint": "yarn lint:js && yarn lint:pkg",
+    "lint:js": "eslint --cache --fix --ext .js ./",
+    "lint:pkg": "npmPkgJsonLint .",
     "test": "jest",
     "build": "lerna exec --scope react-union -- rollup -c=../../rollup.config.js",
     "prepublish": "yarn build",
@@ -80,7 +83,7 @@
     "linters": {
       "(packages|boilerplates)/**/*.js": [
         "prettier --write",
-        "yarn lint:fix",
+        "eslint --fix",
         "git add"
       ]
     }
