simpler imports of polyfills

--- a/packages/react-union-polyfills/package.json
+++ b/packages/react-union-polyfills/package.json
@@ -2,11 +2,11 @@
 	"name": "react-union-polyfills",
 	"version": "0.14.2",
 	"description": "Polyfills package for react-union.",
-	"main": "src/stable.js",
+	"main": "stable.js",
 	"files": [
-		"src/ie9.js",
-		"src/ie11.js",
-		"src/stable.js"
+		"ie9.js",
+		"ie11.js",
+		"stable.js"
 	],
 	"repository": "https://github.com/lundegaard/react-union",
 	"contributors": [
