fix: missing file

--- a/packages/react-union-liferay-build-tools/package.json
+++ b/packages/react-union-liferay-build-tools/package.json
@@ -7,7 +7,8 @@
 	"files": [
 		"scripts",
 		"bin",
-		"cli.js"
+		"cli.js",
+		"template-npmbundlerrc.json"
 	],
 	"bin": {
 		"liferay-scripts": "./bin/liferay-scripts.js"
