--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 lerna-debug.log*
 build/
+dist/
+
+liferay/**/build
 
 # Created by https://www.gitignore.io/api/vim,node,emacs,linux,macos,gradle,windows,sublimetext,intellij+all,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=vim,node,emacs,linux,macos,gradle,windows,sublimetext,intellij+all,visualstudiocode
